--- a/Form/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Form/en.lproj/MainStoryboard_iPhone.storyboard
@@ -27,12 +27,12 @@
                                                     <color key="textColor" red="0.32156862749999998" green="0.40000000000000002" blue="0.56862745100000001" alpha="1" colorSpace="calibratedRGB"/>
                                                     <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 </label>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QDY-VM-niw">
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QDY-VM-niw">
                                                     <constraints>
                                                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="210" type="user" id="0gW-s9-5oz"/>
                                                         <constraint firstAttribute="height" constant="30" id="3SW-nP-X8E"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <textInputTraits key="textInputTraits"/>
                                                 </textField>
                                             </subviews>
@@ -57,12 +57,12 @@
                                                     <color key="textColor" red="0.32156862749999998" green="0.40000000000000002" blue="0.56862745100000001" alpha="1" colorSpace="calibratedRGB"/>
                                                     <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                 </label>
-                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JKG-xK-Me2">
+                                                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" adjustsFontSizeToFit="NO" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JKG-xK-Me2">
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="30" id="bTZ-rZ-iNH"/>
                                                         <constraint firstAttribute="width" constant="222" id="oBU-Xy-9DO"/>
                                                     </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <textInputTraits key="textInputTraits"/>
                                                 </textField>
                                             </subviews>
@@ -118,6 +118,11 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Cliente" id="ThG-SP-5p8">
+                        <barButtonItem key="leftBarButtonItem" title="Cancelar" id="u9I-sl-l3Y">
+                            <connections>
+                                <action selector="cancelButtonTapped:" destination="tau-FD-PJO" id="9ty-Fu-bPo"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="done" id="j5D-eU-GCA">
                             <connections>
                                 <action selector="doneButtonTapped:" destination="tau-FD-PJO" id="Xja-em-sHB"/>
@@ -132,7 +137,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j9c-6I-4lu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="686" y="24"/>
+            <point key="canvasLocation" x="1212" y="24"/>
         </scene>
         <!--Sexo View Controller - Sexo-->
         <scene sceneID="F77-bK-P2x">
@@ -205,7 +210,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="py1-gb-VAE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1085" y="52"/>
+            <point key="canvasLocation" x="1611" y="52"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="7zU-Ts-Vp6">
@@ -233,24 +238,37 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="jzB-d2-ITm">
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="ATT-6M-gxf" id="WEb-4Z-erB"/>
+                            </connections>
+                        </searchBar>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="clienteCell" textLabel="2ex-Eu-QcY" style="IBUITableViewCellStyleDefault" id="ZLv-JA-Jd7">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="clienteCell" textLabel="2ex-Eu-QcY" detailTextLabel="MdT-tr-Qjh" style="IBUITableViewCellStyleValue1" id="ZLv-JA-Jd7">
+                                <rect key="frame" x="0.0" y="66" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                     <rect key="frame" x="0.0" y="0.0" width="300" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2ex-Eu-QcY">
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </label>
+                                        <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MdT-tr-Qjh">
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.2196078431372549" green="0.32941176470588235" blue="0.52941176470588236" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         </label>
                                     </subviews>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
                                 <connections>
-                                    <segue destination="tau-FD-PJO" kind="push" identifier="editCliente" id="njE-4z-MuL"/>
+                                    <segue destination="tau-FD-PJO" kind="push" identifier="editCliente" id="xLu-Sa-gED"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -267,7 +285,7 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="hYn-s2-pa2">
                             <connections>
-                                <segue destination="tau-FD-PJO" kind="push" identifier="addCliente" id="fLC-if-W00"/>
+                                <segue destination="vW4-0k-qtg" kind="modal" identifier="addCliente" id="fLC-if-W00"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -276,11 +294,31 @@
             </objects>
             <point key="canvasLocation" x="289" y="24"/>
         </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="h4f-z9-9WR">
+            <objects>
+                <navigationController id="vW4-0k-qtg" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" id="Rbv-4M-zGK"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="m2C-7W-sbW">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="tau-FD-PJO" kind="relationship" relationship="rootViewController" id="KFk-fR-LMh"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lBy-eG-2uS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="794" y="-183"/>
+        </scene>
     </scenes>
     <classes>
         <class className="ClienteFormViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ClienteFormViewController.h"/>
             <relationships>
+                <relationship kind="action" name="cancelButtonTapped:"/>
                 <relationship kind="action" name="doneButtonTapped:"/>
                 <relationship kind="outlet" name="idadeTextField" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="nomeTextField" candidateClass="UITextField"/>
@@ -306,6 +344,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="njE-4z-MuL"/>
+        <segue reference="xLu-Sa-gED"/>
     </inferredMetricsTieBreakers>
 </document>
